Date	Added
12/22
	* Changed how party exp is passed out to eliminate players
	  current in a chat window or those who havn't moved or attacked
	  in 2 minutes [MouseJstr]
	* Fixed a bug in resnametable from local directories,
	  by fixing a bug in grfio_read causing memory corruptions [MouseJstr]
        * Rearranged how guild messages, gm messages, and party messages
          are moved back and forth between the inter server and the
          map server.. eliminating unneeded round trips to eliminate
          lag on a loaded char-server.  [MouseJstr]

            src\char_sql\int_party.c src\char_sql\int_guild.c
            src\char_sql\inter.c src\map\atcommand.c src\map\guild.c
            src\map\intif.c src\map\party.c src\char\int_guild.c
            src\char\inter.c src\char\int_party.c 

	* Reverted npc.c back to before jA 1081. This fixes warp portals missing and other npc bugs [Ajarn]
	* Added conditional SHOW_DEBUG_MSG for displaying ShowDebug()'s output, it was missing before [MC Cameri]
	* Added #zeny, removed @charzeny [MC Cameri]
        * Fixed reading itemslottable.txt causing cards to become unuseable [celest]
        * Added error message if file renaming in lock_fclose fails [celest]
        * Fixed frost diver not working ... my bad =p [celest]
        * Corrected typo in clif_hpmeter - md -> sd [celest]
        * Check if the player has been authentified by the char server before
          clearing any timers in map_quit [celest]
        * Added eventtimercount and timerskill_count - check these before clearing
          or deleting timers [celest]
        * Added sc_count check in skill_stop_dancing [celest]
        * Translated the japanese part in battle_athena.conf [celest]
        * Added ignore the new skill delays when chaining monk combos [celest]

12/21
	* Since conf/maps_list.txt was removed, added conf/maps_athena.conf [Ajarn]