@@ -827,5 +827,8 @@ disp_hpmeter: no
 // 0 - Disabled
 bone_drop: 0
 
+// The rate of monsters dropping ores by the skill Ore Discovery (Default is 100)
+finding_ore_rate: 100
+
 import: conf/import/battle_conf.txt
 
