@@ -355,6 +355,7 @@ extern struct Battle_Config {
 	int skill_range_leniency; // [celest]
 	int motd_type; // [celest]
 	int allow_atcommand_when_mute; // [celest]
+	int finding_ore_rate; // orn
 
 #ifndef TXT_ONLY /* SQL-only options */
 	int mail_system; // [Valaris]
